# CattusGPSDOv3_Firmware

./: .clang-format  .gitmodules  CMakeLists.txt  README
cmake/: complier.cmake  freertos.cmake  u8g2.cmake
doc/: resource.md
include/: FreeRTOSConfig.h  stm32g4xx_hal_conf.h
script/: openocd.cfg  openocd_flash.cfg
src/: clock.c  clock.cpp  clock.h  clock.hpp  counter.c  counter.h  gps.c  gps.h  hal_timebase.c  hardware_error.cpp  hardware_error.h  hardware_error.hpp  init.c  interrupt_handle.c  main.c  main.cpp  ocxo.c  ocxo.h  screen.c  screen.h  swj.c  swj.cpp  swj.h  swj.hpp  syscall.c  system.ld
test/: test_gps_gga_parser.c
